--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@babel/preset-typescript": "^7.1.0",
 		"@types/react": "^16.4.16",
 		"@types/react-dom": "^16.0.9",
+		"@types/styled-components": "^4.0.1",
 		"babel-eslint": "^10.0.1",
 		"babel-loader": "^8.0.4",
 		"babel-plugin-styled-components": "^1.8.0",
@@ -45,7 +46,7 @@
 		"typescript": "^3.1.1"
 	},
 	"peerDependencies": {
-		"react": "^16.5.2",
-		"styled-components": "^3.4.9"
+		"react": "^16.x.x",
+		"styled-components": "^3.x.x"
 	}
 }
