--- a/package.json
+++ b/package.json
@@ -19,22 +19,13 @@
 		"dist"
 	],
 	"devDependencies": {
-		"@babel/core": "^7.1.2",
-		"@babel/plugin-proposal-class-properties": "^7.1.0",
-		"@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-		"@babel/preset-env": "^7.1.0",
-		"@babel/preset-react": "^7.0.0",
-		"@babel/preset-typescript": "^7.1.0",
+		"@svgr/rollup": "^3.1.0",
 		"@types/react": "^16.4.16",
 		"@types/react-dom": "^16.0.9",
 		"@types/styled-components": "^4.0.1",
-		"babel-eslint": "^10.0.1",
-		"babel-loader": "^8.0.4",
-		"babel-plugin-styled-components": "^1.8.0",
 		"react": "^16.5.2",
 		"react-dom": "^16.5.2",
 		"rollup": "^0.66.5",
-		"rollup-plugin-babel": "^4.0.3",
 		"rollup-plugin-commonjs": "^9.1.8",
 		"rollup-plugin-node-resolve": "^3.4.0",
 		"rollup-plugin-peer-deps-external": "^2.2.0",
