--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
 	"name": "react-takka-select",
-	"version": "1.0.1",
+	"version": "1.1.0",
 	"scripts": {
 		"start": "rollup -c -w",
-		"build": "rollup -c",
-		"predeploy": "cd ./example && yarn install && yarn run build"
+		"build": "rollup -c"
 	},
 	"author": {
 		"name": "Alena Dzhukich",
@@ -15,7 +14,9 @@
 	"main": "./dist/index.js",
 	"module": "./dist/index.es.js",
 	"jsnext:main": "./dist/index.es.js",
-	"files": ["dist", "LICENSE.md"],
+	"files": [
+		"dist"
+	],
 	"devDependencies": {
 		"@svgr/rollup": "^3.1.0",
 		"@types/react": "^16.4.16",
