--- a/example/package.json
+++ b/example/package.json
@@ -11,6 +11,7 @@
 		"react": "^16.5.2",
 		"react-dom": "^16.5.2",
 		"react-scripts": "^1.1.4",
-		"react-takka-select": "link:.."
+		"react-takka-select": "link:..",
+		"styled-components": "^4.0.0-beta.11.3"
 	}
 }
