--- a/example/package.json
+++ b/example/package.json
@@ -12,6 +12,6 @@
 		"react-dom": "^16.5.2",
 		"react-scripts": "^2.0.5",
 		"react-takka-select": "link:..",
-		"styled-components": "^4.0.0-beta.11.3"
+		"styled-components": "4.0.1"
 	}
 }
