--- a/package.json
+++ b/package.json
@@ -19,23 +19,23 @@
 	],
 	"devDependencies": {
 		"@svgr/rollup": "^3.1.0",
-		"@types/react": "^16.4.16",
+		"@types/react": "^16.4.18",
 		"@types/styled-components": "^4.0.2",
-		"react": "^16.6.0",
-		"react-dom": "^16.5.2",
 		"rollup": "^0.66.6",
-		"rollup-plugin-commonjs": "^9.1.8",
+		"rollup-plugin-commonjs": "^9.2.0",
 		"rollup-plugin-node-resolve": "^3.4.0",
 		"rollup-plugin-peer-deps-external": "^2.2.0",
-		"rollup-plugin-postcss-modules": "^1.0.9",
-		"rollup-plugin-typescript2": "^0.17.1",
+		"rollup-plugin-postcss-modules": "^1.0.10",
+		"rollup-plugin-typescript2": "^0.17.2",
 		"rollup-plugin-url": "^2.0.1",
 		"styled-components": "4.0.1",
 		"tslib": "^1.9.3",
-		"typescript": "^3.1.1"
+		"typescript": "^3.1.3"
 	},
 	"peerDependencies": {
-		"react": "16.x.x",
 		"styled-components": "4.x.x"
+	},
+	"dependencies": {
+		"react": "^16.6.0"
 	}
 }
