--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
 		"@svgr/rollup": "^3.1.0",
 		"@types/react": "^16.4.18",
 		"@types/styled-components": "^4.0.2",
+		"react": "^16.6.0",
+		"react-dom": "^16.6.0",
 		"rollup": "^0.66.6",
 		"rollup-plugin-commonjs": "^9.2.0",
 		"rollup-plugin-node-resolve": "^3.4.0",
@@ -33,9 +35,7 @@
 		"typescript": "^3.1.3"
 	},
 	"peerDependencies": {
+		"react": "16.x.x",
 		"styled-components": "4.x.x"
-	},
-	"dependencies": {
-		"react": "^16.6.0"
 	}
 }
