Change homepage of example && change gitignore

--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "react-takka-select-example",
-	"homepage": "https://github.com/Keireira/react-takka-select",
+	"homepage": "https://react-takka-select.netlify.com/",
 	"version": "0.0.0",
 	"license": "UNLICENSED",
 	"scripts": {
