--- a/example/package.json
+++ b/example/package.json
@@ -10,8 +10,8 @@
 	"dependencies": {
 		"react": "^16.6.0",
 		"react-dom": "^16.6.0",
-		"react-scripts": "^2.0.5",
+		"react-scripts": "^2.1.1",
 		"react-takka-select": "link:..",
-		"styled-components": "4.0.1"
+		"styled-components": "^4.0.3"
 	}
 }
