--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 	"devDependencies": {
 		"@svgr/rollup": "^3.1.0",
 		"@types/react": "^16.4.18",
-		"@types/styled-components": "^4.0.2",
+		"@types/styled-components": "^4.0.3",
 		"react": "^16.6.0",
 		"react-dom": "^16.6.0",
 		"rollup": "^0.66.6",
@@ -30,9 +30,9 @@
 		"rollup-plugin-postcss-modules": "^1.0.10",
 		"rollup-plugin-typescript2": "^0.17.2",
 		"rollup-plugin-url": "^2.0.1",
-		"styled-components": "4.0.1",
+		"styled-components": "^4.0.3",
 		"tslib": "^1.9.3",
-		"typescript": "^3.1.3"
+		"typescript": "^3.1.6"
 	},
 	"peerDependencies": {
 		"react": "16.x.x",
