--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
 		"dist"
 	],
 	"devDependencies": {
-		"@svgr/rollup": "^3.1.0",
-		"@types/react": "^16.4.18",
-		"@types/styled-components": "^4.0.3",
-		"react": "^16.6.0",
-		"react-dom": "^16.6.0",
-		"rollup": "^0.66.6",
+		"@svgr/rollup": "^4.1.0",
+		"@types/react": "^16.7.18",
+		"@types/styled-components": "^4.1.5",
+		"react": "^16.8.0-alpha.0",
+		"react-dom": "^16.8.0-alpha.0",
+		"rollup": "^1.1.0",
 		"rollup-plugin-commonjs": "^9.2.0",
-		"rollup-plugin-node-resolve": "^3.4.0",
+		"rollup-plugin-node-resolve": "^4.0.0",
 		"rollup-plugin-peer-deps-external": "^2.2.0",
 		"rollup-plugin-postcss-modules": "^1.0.10",
-		"rollup-plugin-typescript2": "^0.17.2",
-		"rollup-plugin-url": "^2.0.1",
-		"styled-components": "^4.0.3",
+		"rollup-plugin-typescript2": "^0.18.1",
+		"rollup-plugin-url": "^2.1.0",
+		"styled-components": "^4.1.3",
 		"tslib": "^1.9.3",
-		"typescript": "^3.1.6"
+		"typescript": "^3.2.2"
 	},
 	"peerDependencies": {
 		"react": "16.x.x",
