--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,11 @@
 		"target": "esnext",
 		"module": "esnext",
 		"jsx": "react",
-		"allowJs": true,
+		"allowJs": false,
 		"noEmit": true,
 		"isolatedModules": true,
 		"esModuleInterop": true,
-
 		"moduleResolution": "node",
-
 		"baseUrl": "src",
 		"paths": {
 			"@local/helpers": ["helpers/index"],
@@ -18,8 +16,8 @@
 			"@local/components": ["components/index"],
 			"@local/components/*": ["components/*"],
 
-			"@local/constants": ["constants"],
-			"@local/context": ["context"]
+			"@local": ["./index"],
+			"@local/*": ["./*"]
 		},
 	},
 	"exclude": [
