--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "react-takka-select-example",
-	"homepage": "https://react-takka-select.netlify.com/",
+	"homepage": "https://select.alena.red/",
 	"version": "0.0.0",
 	"license": "UNLICENSED",
 	"scripts": {
