--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "react-takka-select",
-	"version": "1.1.12",
+	"version": "1.1.13",
 	"scripts": {
-		"start": "rollup -c -w",
-		"build": "rollup -c"
+		"start": "NODE_ENV=development rollup -c -w",
+		"build": "NODE_ENV=production rollup -c"
 	},
 	"author": {
 		"name": "Alena Dzhukich",
@@ -26,6 +26,7 @@
 		"rollup-plugin-commonjs": "^9.2.0",
 		"rollup-plugin-node-resolve": "^4.0.0",
 		"rollup-plugin-peer-deps-external": "^2.2.0",
+		"rollup-plugin-terser": "^4.0.2",
 		"rollup-plugin-typescript2": "^0.19.2",
 		"rollup-plugin-url": "^2.1.0",
 		"styled-components": "^4.1.3",
