--- a/example/package.json
+++ b/example/package.json
@@ -8,10 +8,10 @@
 		"build": "react-scripts build"
 	},
 	"dependencies": {
-		"react": "^16.8.0-alpha.1",
-		"react-dom": "^16.8.0-alpha.1",
-		"react-scripts": "^2.1.3",
+		"react": "^16.8.5",
+		"react-dom": "^16.8.5",
+		"react-scripts": "^2.1.8",
 		"react-takka-select": "link:..",
-		"styled-components": "^4.1.3"
+		"styled-components": "^4.2.0"
 	}
 }
