--- a/package.json
+++ b/package.json
@@ -19,25 +19,25 @@
 	],
 	"devDependencies": {
 		"@svgr/rollup": "^4.1.0",
-		"@types/react": "^16.7.20",
-		"@types/react-dom": "^16.0.11",
-		"@types/styled-components": "^4.1.6",
-		"rollup": "^1.1.2",
-		"rollup-plugin-commonjs": "^9.2.0",
-		"rollup-plugin-node-resolve": "^4.0.0",
+		"@types/react": "^16.8.8",
+		"@types/react-dom": "^16.8.3",
+		"@types/styled-components": "^4.1.12",
+		"rollup": "^1.7.3",
+		"rollup-plugin-commonjs": "^9.2.2",
+		"rollup-plugin-node-resolve": "^4.0.1",
 		"rollup-plugin-peer-deps-external": "^2.2.0",
-		"rollup-plugin-typescript2": "^0.19.2",
-		"rollup-plugin-url": "^2.1.0",
-		"styled-components": "^4.1.3",
+		"rollup-plugin-typescript2": "^0.20.1",
+		"rollup-plugin-url": "^2.2.0",
+		"styled-components": "^4.2.0",
 		"tslib": "^1.9.3",
-		"typescript": "^3.2.4"
+		"typescript": "^3.3.4000"
 	},
 	"peerDependencies": {
-		"react": "^16.6.x",
-		"styled-components": "^4.x.x"
+		"react": ">=16.6.x",
+		"styled-components": ">=4.x.x"
 	},
 	"dependencies": {
-		"react": "^16.8.0-alpha.1",
-		"react-dom": "^16.8.0-alpha.1"
+		"react": "^16.8.5",
+		"react-dom": "^16.8.5"
 	}
 }
